assignment3/app-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-service
spec:
  selector:
    app: app-2
  ports:
  - port: 8080
    targetPort: 3000
