assignment3/app-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "app-1-canary"
    nginx.ingress.kubernetes.io/canary-weight-percent: "70"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-1-service
            port:
              number: 8080
  ingressClassName: nginx-ingress
