assignment3/app-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "false"
  labels:
    app: app-2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2-service
            port:
              number: 8080
